Small layout tweaks, fixed gfx panel getting stretched slightly

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h2 {
     font-size: medium;
     color: rgba(255, 255, 255, 0.6);
     text-align: right;
+    font-style: italic;
     a {
         color: rgba(255, 255, 255, 0.6);
         text-decoration: none;
@@ -67,10 +68,6 @@ p {
     display: flex;
     flex-direction: row;
 
-    >.button {
-        max-width: none;
-    }
-
     .flex-column:not(:last-child) {
         margin-right: 8px;
     }
@@ -79,9 +76,7 @@ p {
 .sidebar {
     position: sticky;
     position: -webkit-sticky;
-    align-items: stretch;
     height: calc(100vh - 32px);
-    display: flex;
     background-color: rgb(51, 96, 102);
     box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.25);
     padding: 16px 24px;
@@ -99,9 +94,7 @@ canvas {
 }
 
 .gfx-canvas {
-    flex: 0 0 0;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin: 8px 0px;
     padding: 8px;
     border-radius: 4px;
     background-color: rgb(18, 53, 53);
@@ -111,7 +104,7 @@ canvas {
 
 .selected-list {
     margin-top: 8px;
-    min-height: 200;
+    min-height: 250px;
     overflow-y: auto;
     background-color: rgb(45, 89, 94);
     box-shadow: inset 1px 1px 8px 0px rgba(0, 0, 0, 0.125);
@@ -148,10 +141,20 @@ canvas {
     }
 }
 
+.buttons-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    >.button {
+        max-width: none;
+    }
+}
+
 .category-list {
     user-select: none;
     margin: 16px;
-    padding: 104px 0px;
+    padding: 98px 0px;
 
     .sprite-category {
         display: flex;
@@ -160,8 +163,9 @@ canvas {
 
         .header {
             flex: 0 0 100%;
-            padding: 8px 4px;
+            padding: 12px 4px 4px;
             margin: 2px;
+            font-style: italic;
         }
     }
 }
@@ -283,7 +287,7 @@ canvas {
         box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.25);
         background-color: rgb(51, 96, 102);
         margin: 0px 16px 16px 368px;
-        padding: 48px 24px;
+        padding: 48px 24px 24px;
         border-radius: 4px;
         pointer-events: auto;
         transition: transform 0.1s;
